# XYZFreeCart

./: CMakeLists.txt  README.md  freecart.c
3DParts/: ControlPanel-BodyPocket006.stl  ControlPanel-BtnLockPlate.stl  ControlPanel-PicoFixPlateUSBSide.stl
TM1637-pico/: PicoTM1637.c  PicoTM1637.h
